--- a/stockwatcher/stockwatcher/templates/base.html
+++ b/stockwatcher/stockwatcher/templates/base.html
@@ -35,20 +35,20 @@
 
 	<body>
 			<nav class="navbar navbar-expand-md navbar-dark bg-success">
-				<a class="navbar-brand" href="#">Stock Watcher</a>
+				<a class="navbar-brand" href="{% url 'index' %}">Stock Watcher</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link disabled" href="#">Markets</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Stocks</a>
+							<a class="nav-link" href="{% url 'index' %}">Stocks</a>
 						</li>
 					</ul>
 					<form class="form-inline my-2 my-lg-0">
@@ -74,7 +74,10 @@
 			</main>
 			<footer>
 				<div class="container">
-					<p>Made with ❤️ by Kevin Quan.</p>
+					<p>
+						Data provided for free by <a href="https://iextrading.com/developer" target="_blank" rel="noopener noreferrer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/" target="_blank" rel="noopener noreferrer">IEX's Terms of Use.</a><br />
+						Made with ❤️ by Kevin Quan.
+					</p>
 				</div>
 			</footer>
 
